# LearnOpenGL

./: .clang-format  .gitignore  CMakeLists.txt  build.sh
example/light/: CMakeLists.txt  main.cc
example/model-loading/: CMakeLists.txt  main.cc
example/stencil-testing/: CMakeLists.txt  main.cc
shaders/: 1.colors.frag  1.colors.vert  shader.frag  shader.vert  stencil-single-color.frag
src/: CMakeLists.txt  camera.h  main.cc  shader.h
src/base/: camera.h  mesh.h  model.h  shader.h
